--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html><meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Dermawan — DIY × Process</title>
+<title>Site in Progress</title>
 <style>body{font:16px/1.6 system-ui;margin:40px;max-width:760px}</style>
-<h1>Dermawan — DIY × Process</h1>
-<p>Home to my builds and the thinking behind them.</p>
+<h1>in progress</h1>
+<p>thinking..........</p>
 <nav>
-  <a href="/projects/">DIY Projects</a> ·
+  <a href="/projects/">in progress</a> ·
   <a href="/flows/">Process Flows</a>
 </nav>
