--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>body{font:16px/1.6 system-ui;margin:40px;max-width:760px}</style>
 <h1>in progress</h1>
 <p>thinking..........</p>
-<nav>
+<!-- temporarily hidden <nav>
   <a href="/projects/">in progress</a> ·
   <a href="/flows/">Process Flows</a>
-</nav>
+</nav> -->
