update the correct index file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
-<!doctype html><meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Site in Progress</title>
-<style>body{font:16px/1.6 system-ui;margin:40px;max-width:760px}</style>
-<h1>in progress</h1>
-<p>thinking..........</p>
-<!-- temporarily hidden <nav>
-  <a href="/projects/">in progress</a> ·
-  <a href="/flows/">Process Flows</a>
-</nav> -->
+---
+layout: home
+title: "Welcome to Dermawan"
+---
+
+Hi, I’m **Dermawan**.  
+This site is where I document my **DIY projects** and **process flows** — the thinking behind how things get built and work.
