in progress index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
----
-layout: home
-title: "Welcome to Dermawan"
----
-
-Hi, I’m **Dermawan**.  
-This site is where I document my **DIY projects** and **process flows** — the thinking behind how things get built and work.
+in progress
