in progress setting

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-in progress
+---
+layout: home
+title: "Welcome to Dermawan"
+---
+
+Hi, I’m **Dermawan**.  
+This site is where I document my **DIY projects** and **process flows** — the thinking behind how things get built and work.
